// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TypeScriptGenerator matches expected output: conditional.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment ConditionField on Node {
  id @include(if: $condition)
}

fragment NestedCondition on Node {
  ... @include(if: $condition) {
    id
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
declare const _ConditionField$ref: unique symbol;
export type ConditionField$ref = typeof _ConditionField$ref;
export type ConditionField = {
    readonly id?: string;
    readonly " $refType": ConditionField$ref;
};


declare const _NestedCondition$ref: unique symbol;
export type NestedCondition$ref = typeof _NestedCondition$ref;
export type NestedCondition = {
    readonly id?: string;
    readonly " $refType": NestedCondition$ref;
};

`;

exports[`TypeScriptGenerator matches expected output: fragment-spread.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment FragmentSpread on Node {
  id
  ...OtherFragment
  justFrag: profilePicture {
    ...PictureFragment
  }
  fragAndField: profilePicture {
    uri
    ...PictureFragment
  }
  ... on User {
    ...UserFrag1
    ...UserFrag2
  }
}

fragment ConcreateTypes on Viewer {
  actor {
    __typename
    ... on Page {
      id
      ...PageFragment
    }
    ... on User {
      name
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
type OtherFragment$ref = any;
type PictureFragment$ref = any;
type UserFrag1$ref = any;
type UserFrag2$ref = any;
declare const _FragmentSpread$ref: unique symbol;
export type FragmentSpread$ref = typeof _FragmentSpread$ref;
export type FragmentSpread = {
    readonly id: string;
    readonly justFrag: ({
        readonly " $fragmentRefs": PictureFragment$ref;
    }) | null;
    readonly fragAndField: ({
        readonly uri: string | null;
        readonly " $fragmentRefs": PictureFragment$ref;
    }) | null;
    readonly " $fragmentRefs": OtherFragment$ref & UserFrag1$ref & UserFrag2$ref;
    readonly " $refType": FragmentSpread$ref;
};


type PageFragment$ref = any;
declare const _ConcreateTypes$ref: unique symbol;
export type ConcreateTypes$ref = typeof _ConcreateTypes$ref;
export type ConcreateTypes = {
    readonly actor: ({
        readonly __typename: "Page";
        readonly id: string;
        readonly " $fragmentRefs": PageFragment$ref;
    } | {
        readonly __typename: "User";
        readonly name: string | null;
    } | {
        /*This will never be '% other', but we need some
        value in case none of the concrete values match.*/
        readonly __typename: "%other";
    }) | null;
    readonly " $refType": ConcreateTypes$ref;
};

`;

exports[`TypeScriptGenerator matches expected output: inline-fragment.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment InlineFragment on Node {
  id
  ... on Actor {
    id
    name
  }
  ... on User {
    message {
      text
    }
  }
}

fragment InlineFragmentWithOverlappingFields on Actor {
  ... on User {
    hometown {
      id
      name
    }
  }
  ... on Page {
    name
    hometown {
      id
      message {
        text
      }
    }
  }
}

fragment InlineFragmentConditionalID on Node {
  ... on Actor {
    id # nullable since it's conditional
    name
  }
}

fragment InlineFragmentKitchenSink on Story {
  actor {
    id
    profilePicture {
      uri
    }
    ... on User {
      id
      name
      ...SomeFragment
      profilePicture {
        width
      }
    }
    ... on Page {
      profilePicture {
        uri
        height
      }
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
declare const _InlineFragment$ref: unique symbol;
export type InlineFragment$ref = typeof _InlineFragment$ref;
export type InlineFragment = {
    readonly id: string;
    readonly name?: string | null;
    readonly message?: ({
        readonly text: string | null;
    }) | null;
    readonly " $refType": InlineFragment$ref;
};


declare const _InlineFragmentWithOverlappingFields$ref: unique symbol;
export type InlineFragmentWithOverlappingFields$ref = typeof _InlineFragmentWithOverlappingFields$ref;
export type InlineFragmentWithOverlappingFields = {
    readonly hometown?: ({
        readonly id: string;
        readonly name: string | null;
        readonly message?: ({
            readonly text: string | null;
        }) | null;
    }) | null;
    readonly name?: string | null;
    readonly " $refType": InlineFragmentWithOverlappingFields$ref;
};


declare const _InlineFragmentConditionalID$ref: unique symbol;
export type InlineFragmentConditionalID$ref = typeof _InlineFragmentConditionalID$ref;
export type InlineFragmentConditionalID = {
    readonly id?: string;
    readonly name?: string | null;
    readonly " $refType": InlineFragmentConditionalID$ref;
};


type SomeFragment$ref = any;
declare const _InlineFragmentKitchenSink$ref: unique symbol;
export type InlineFragmentKitchenSink$ref = typeof _InlineFragmentKitchenSink$ref;
export type InlineFragmentKitchenSink = {
    readonly actor: ({
        readonly id: string;
        readonly profilePicture: ({
            readonly uri: string | null;
            readonly width?: number | null;
            readonly height?: number | null;
        }) | null;
        readonly name?: string | null;
        readonly " $fragmentRefs": SomeFragment$ref;
    }) | null;
    readonly " $refType": InlineFragmentKitchenSink$ref;
};

`;

exports[`TypeScriptGenerator matches expected output: linked-field.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment LinkedField on User {
  profilePicture {
    uri
    width
    height
  }
  hometown {
    # object
    id
    profilePicture {
      uri
    }
  }
  actor {
    # interface
    id
  }
}

query UnionTypeTest {
  neverNode {
    __typename
    ... on FakeNode {
      id
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
declare const _LinkedField$ref: unique symbol;
export type LinkedField$ref = typeof _LinkedField$ref;
export type LinkedField = {
    readonly profilePicture: ({
        readonly uri: string | null;
        readonly width: number | null;
        readonly height: number | null;
    }) | null;
    readonly hometown: ({
        readonly id: string;
        readonly profilePicture: ({
            readonly uri: string | null;
        }) | null;
    }) | null;
    readonly actor: ({
        readonly id: string;
    }) | null;
    readonly " $refType": LinkedField$ref;
};


export type UnionTypeTestVariables = {};
export type UnionTypeTestResponse = {
    readonly neverNode: ({
        readonly __typename: "FakeNode";
        readonly id: string;
    } | {
        /*This will never be '% other', but we need some
        value in case none of the concrete values match.*/
        readonly __typename: "%other";
    }) | null;
};

`;

exports[`TypeScriptGenerator matches expected output: mutation.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
mutation CommentCreateMutation(
  $input: CommentCreateInput!
  $first: Int
  $orderBy: [String!]
) {
  commentCreate(input: $input) {
    comment {
      id
      name
      friends(first: $first, orderby: $orderBy) {
        count
      }
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
export type CommentCreateInput = {
    readonly clientMutationId?: string | null;
    readonly feedbackId?: string | null;
    readonly feedback?: CommentfeedbackFeedback | null;
};
export type CommentfeedbackFeedback = {
    readonly comment?: FeedbackcommentComment | null;
};
export type FeedbackcommentComment = {
    readonly feedback?: CommentfeedbackFeedback | null;
};
export type CommentCreateMutationVariables = {
    readonly input: CommentCreateInput;
    readonly first?: number | null;
    readonly orderBy?: ReadonlyArray<string> | null;
};
export type CommentCreateMutationResponse = {
    readonly commentCreate: ({
        readonly comment: ({
            readonly id: string;
            readonly name: string | null;
            readonly friends: ({
                readonly count: number | null;
            }) | null;
        }) | null;
    }) | null;
};

`;

exports[`TypeScriptGenerator matches expected output: mutation-input-has-array.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
mutation InputHasArray($input: UpdateAllSeenStateInput) {
  viewerNotificationsUpdateAllSeenState(input: $input) {
    stories {
      actorCount
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
export type UpdateAllSeenStateInput = {
    readonly clientMutationId?: string | null;
    readonly storyIds?: ReadonlyArray<string | null> | null;
};
export type InputHasArrayVariables = {
    readonly input?: UpdateAllSeenStateInput | null;
};
export type InputHasArrayResponse = {
    readonly viewerNotificationsUpdateAllSeenState: ({
        readonly stories: ReadonlyArray<({
            readonly actorCount: number | null;
        }) | null> | null;
    }) | null;
};

`;

exports[`TypeScriptGenerator matches expected output: plural-fragment.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment PluralFragment on Node @relay(plural: true) {
  id
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
declare const _PluralFragment$ref: unique symbol;
export type PluralFragment$ref = typeof _PluralFragment$ref;
export type PluralFragment = ReadonlyArray<{
    readonly id: string;
    readonly " $refType": PluralFragment$ref;
}>;

`;

exports[`TypeScriptGenerator matches expected output: recursive-fragments.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment FragmentSpread on Node {
   id
   ... @include(if: $condition) {
     ...FragmentSpread
   }
 }

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
type FragmentSpread$ref = any;
declare const _FragmentSpread$ref: unique symbol;
export type FragmentSpread$ref = typeof _FragmentSpread$ref;
export type FragmentSpread = {
    readonly id: string;
    readonly " $fragmentRefs": FragmentSpread$ref;
    readonly " $refType": FragmentSpread$ref;
};

`;

exports[`TypeScriptGenerator matches expected output: roots.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query ExampleQuery($id: ID!) {
  node(id: $id) {
    id
  }
}

fragment ExampleFragment on User {
  id
}

mutation TestMutation($input: CommentCreateInput!) {
  commentCreate(input: $input) {
    comment {
      id
    }
  }
}

subscription TestSubscription($input: FeedbackLikeInput) {
  feedbackLikeSubscribe(input: $input) {
    feedback {
      id
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
export type ExampleQueryVariables = {
    readonly id: string;
};
export type ExampleQueryResponse = {
    readonly node: ({
        readonly id: string;
    }) | null;
};


declare const _ExampleFragment$ref: unique symbol;
export type ExampleFragment$ref = typeof _ExampleFragment$ref;
export type ExampleFragment = {
    readonly id: string;
    readonly " $refType": ExampleFragment$ref;
};


export type CommentCreateInput = {
    readonly clientMutationId?: string | null;
    readonly feedbackId?: string | null;
    readonly feedback?: CommentfeedbackFeedback | null;
};
export type CommentfeedbackFeedback = {
    readonly comment?: FeedbackcommentComment | null;
};
export type FeedbackcommentComment = {
    readonly feedback?: CommentfeedbackFeedback | null;
};
export type TestMutationVariables = {
    readonly input: CommentCreateInput;
};
export type TestMutationResponse = {
    readonly commentCreate: ({
        readonly comment: ({
            readonly id: string;
        }) | null;
    }) | null;
};


export type FeedbackLikeInput = {
    readonly clientMutationId?: string | null;
    readonly feedbackId?: string | null;
};
export type TestSubscriptionVariables = {
    readonly input?: FeedbackLikeInput | null;
};
export type TestSubscriptionResponse = {
    readonly feedbackLikeSubscribe: ({
        readonly feedback: ({
            readonly id: string;
        }) | null;
    }) | null;
};

`;

exports[`TypeScriptGenerator matches expected output: scalar-field.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment ScalarField on User {
  id
  name
  websites
  traits
  aliasedLinkedField: birthdate {
    aliasedField: year
  }
  screennames {
    name
    service
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
export type PersonalityTraits = "CHEERFUL" | "DERISIVE" | "HELPFUL" | "SNARKY" | "%future added value";
declare const _ScalarField$ref: unique symbol;
export type ScalarField$ref = typeof _ScalarField$ref;
export type ScalarField = {
    readonly id: string;
    readonly name: string | null;
    readonly websites: ReadonlyArray<string | null> | null;
    readonly traits: ReadonlyArray<PersonalityTraits | null> | null;
    readonly aliasedLinkedField: ({
        readonly aliasedField: number | null;
    }) | null;
    readonly screennames: ReadonlyArray<({
        readonly name: string | null;
        readonly service: string | null;
    }) | null> | null;
    readonly " $refType": ScalarField$ref;
};

`;

exports[`TypeScriptGenerator matches expected output: typename-on-union.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment TypenameInside on Actor {
  ... on User {
    __typename
    firstName
  }
  ... on Page {
    __typename
    username
  }
}

fragment TypenameOutside on Actor {
  __typename
  ... on User {
    firstName
  }
  ... on Page {
    username
  }
}

fragment TypenameOutsideWithAbstractType on Node {
  __typename
  ... on User {
    firstName
    address {
      street # only here
      city # common
    }
  }
  ... on Actor {
    username
    address {
      city # common
      country # only here
    }
  }
}

fragment TypenameWithoutSpreads on User {
  __typename
  firstName
}

fragment TypenameWithoutSpreadsAbstractType on Node {
  __typename
  id
}


fragment TypenameWithCommonSelections on Actor {
  __typename
  name
  ... on User {
    firstName
  }
  ... on Page {
    username
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
declare const _TypenameInside$ref: unique symbol;
export type TypenameInside$ref = typeof _TypenameInside$ref;
export type TypenameInside = {
    readonly __typename: "User";
    readonly firstName: string | null;
    readonly " $refType": TypenameInside$ref;
} | {
    readonly __typename: "Page";
    readonly username: string | null;
    readonly " $refType": TypenameInside$ref;
} | {
    /*This will never be '% other', but we need some
    value in case none of the concrete values match.*/
    readonly __typename: "%other";
    readonly " $refType": TypenameInside$ref;
};


declare const _TypenameOutside$ref: unique symbol;
export type TypenameOutside$ref = typeof _TypenameOutside$ref;
export type TypenameOutside = {
    readonly __typename: "User";
    readonly firstName: string | null;
    readonly " $refType": TypenameOutside$ref;
} | {
    readonly __typename: "Page";
    readonly username: string | null;
    readonly " $refType": TypenameOutside$ref;
} | {
    /*This will never be '% other', but we need some
    value in case none of the concrete values match.*/
    readonly __typename: "%other";
    readonly " $refType": TypenameOutside$ref;
};


declare const _TypenameOutsideWithAbstractType$ref: unique symbol;
export type TypenameOutsideWithAbstractType$ref = typeof _TypenameOutsideWithAbstractType$ref;
export type TypenameOutsideWithAbstractType = {
    readonly __typename: string;
    readonly username?: string | null;
    readonly address?: ({
        readonly city: string | null;
        readonly country: string | null;
        readonly street?: string | null;
    }) | null;
    readonly firstName?: string | null;
    readonly " $refType": TypenameOutsideWithAbstractType$ref;
};


declare const _TypenameWithoutSpreads$ref: unique symbol;
export type TypenameWithoutSpreads$ref = typeof _TypenameWithoutSpreads$ref;
export type TypenameWithoutSpreads = {
    readonly firstName: string | null;
    readonly __typename: "User";
    readonly " $refType": TypenameWithoutSpreads$ref;
};


declare const _TypenameWithoutSpreadsAbstractType$ref: unique symbol;
export type TypenameWithoutSpreadsAbstractType$ref = typeof _TypenameWithoutSpreadsAbstractType$ref;
export type TypenameWithoutSpreadsAbstractType = {
    readonly __typename: string;
    readonly id: string;
    readonly " $refType": TypenameWithoutSpreadsAbstractType$ref;
};


declare const _TypenameWithCommonSelections$ref: unique symbol;
export type TypenameWithCommonSelections$ref = typeof _TypenameWithCommonSelections$ref;
export type TypenameWithCommonSelections = {
    readonly __typename: string;
    readonly name: string | null;
    readonly firstName?: string | null;
    readonly username?: string | null;
    readonly " $refType": TypenameWithCommonSelections$ref;
};

`;

exports[`TypeScriptGenerator matches expected output: unmasked-fragment-spreads.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment UserProfile on User {
  profilePicture(size: $ProfilePicture_SIZE) {
    ...PhotoFragment @relay(mask: false)

    # duplicated field should be merged
    ...AnotherRecursiveFragment @relay(mask: false)

    # Compose child fragment
    ...PhotoFragment
  }
}

fragment PhotoFragment on Image {
  uri
  ...RecursiveFragment @relay(mask: false)
}

fragment RecursiveFragment on Image {
  uri
  width
}

fragment AnotherRecursiveFragment on Image {
  uri
  height
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
type PhotoFragment$ref = any;
declare const _UserProfile$ref: unique symbol;
export type UserProfile$ref = typeof _UserProfile$ref;
export type UserProfile = {
    readonly profilePicture: ({
        readonly uri: string | null;
        readonly width: number | null;
        readonly height: number | null;
        readonly " $fragmentRefs": PhotoFragment$ref;
    }) | null;
    readonly " $refType": UserProfile$ref;
};


declare const _PhotoFragment$ref: unique symbol;
export type PhotoFragment$ref = typeof _PhotoFragment$ref;
export type PhotoFragment = {
    readonly uri: string | null;
    readonly width: number | null;
    readonly " $refType": PhotoFragment$ref;
};


declare const _RecursiveFragment$ref: unique symbol;
export type RecursiveFragment$ref = typeof _RecursiveFragment$ref;
export type RecursiveFragment = {
    readonly uri: string | null;
    readonly width: number | null;
    readonly " $refType": RecursiveFragment$ref;
};


declare const _AnotherRecursiveFragment$ref: unique symbol;
export type AnotherRecursiveFragment$ref = typeof _AnotherRecursiveFragment$ref;
export type AnotherRecursiveFragment = {
    readonly uri: string | null;
    readonly height: number | null;
    readonly " $refType": AnotherRecursiveFragment$ref;
};

`;
